@@ -1,3 +1,11 @@
+2019-08-28  Mark Wielaard  <mark@klomp.org>
+
+	* elfutils.spec.in (License): Add GFDL.
+	(%install): Correct sub-shell syntax, use (), not {}.
+	(%files): Add man1/eu-*.1*.
+	Add eu-stack. Add COPYING-GFDL.
+	(%files libelf-devel): Add man3/elf_*.3*.
+
 2019-08-14  Dmitry V. Levin  <ldv@altlinux.org>
 
 	* elfutils.spec.in (%files): Add %{_bindir}/eu-elfclassify.
